Implemented vouched redeem functionality. Added per-client limit for redeeming a voucher. Modified wall interval calculations to add exactly the given interval instead of matching to the end of day. Modified admin views to match the changed data structure of walls and vouchers. Modified chat styles for pinned messages and admin-hover. Added missing translations, updated changed translations. Added link to the login-screen into the sign up page. Features-page now opens in new window from the Premium-dialog. Fixed layout in Pay-page.

--- a/css/jquery.chat.css
+++ b/css/jquery.chat.css
@@ -118,6 +118,7 @@ a.admin-icon.admin-approve-message {
 	border-color: #ffdd57;
 	border-width: 3px;
 	border-style: solid;
+	margin: -3px;
 }
 
 a.change-username {
@@ -133,5 +134,5 @@ a.change-username {
 }
 
 .message.pinned {
-	border: 3px dotted #F00;
+	border: 3px dotted #81bb42;
 }
