--- a/less/visualize.less
+++ b/less/visualize.less
@@ -17,6 +17,8 @@ body {
 			}
 			.feed {
 				height: 50vh;
+				padding-left: 5px;
+				padding-right: 5px;
 				overflow: hidden;
 				text-align: center;
 				.message {
@@ -27,6 +29,8 @@ body {
 				}
 			}
 			.pinnedFeed {
+				padding-left: 5px;
+				padding-right: 5px;
 				text-align: center;
 				.message {
 					margin-bottom: 1em;
@@ -48,6 +52,9 @@ body {
 					&.pinned {
 						font-size: 1.5em;
 						line-height: 110%;
+						padding: 15px;
+						background-color: #fafff6;
+						box-shadow: 2px 1px 3px 0px #ccc;
 					}
 				}
 		}
